--- a/app/src/main/res/layout/activity_main_profile.xml
+++ b/app/src/main/res/layout/activity_main_profile.xml
@@ -1,208 +1,183 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/clProfile"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/general_activity_margin">
+    android:layout_height="match_parent">
+
 
     <TextView
         android:id="@+id/lblName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/general_activity_margin"
-        android:layout_marginTop="@dimen/general_activity_margin"
+        android:layout_marginStart="@dimen/main_profile_margin_Start"
+        android:layout_marginTop="@dimen/standardMargin"
+        android:labelFor="@+id/txtName"
         android:text="@string/main_lblName"
         android:textColor="@color/color_state_selector"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/txtName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/general_activity_margin"
-        android:layout_marginStart="@dimen/general_activity_margin"
-        android:hint="@string/main_txtName"
+        android:layout_marginEnd="@dimen/standardMargin"
+        android:hint="@string/main_txtName_hint"
         android:inputType="textPersonName"
-        android:labelFor="@+id/lblName"
-        android:nextFocusForward="@+id/txtEmail"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblName"
-        tools:text="@sample/users.json/users/fullname"
-        tools:ignore="Autofill">
-        <requestFocus/>
+        app:layout_constraintStart_toStartOf="@+id/lblName"
+        app:layout_constraintTop_toBottomOf="@+id/lblName">
+
+        <requestFocus />
     </EditText>
 
     <TextView
         android:id="@+id/lblEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/general_activity_margin"
-        android:layout_marginTop="@dimen/general_activity_margin"
-        android:text="@string/main_lblEmail"
+        android:layout_marginTop="@dimen/standardMargin"
+        android:text="@string/main_txtEmail"
         android:textColor="@color/color_state_selector"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtName"/>
+        app:layout_constraintStart_toStartOf="@+id/txtName"
+        app:layout_constraintTop_toBottomOf="@+id/txtName" />
 
     <EditText
         android:id="@+id/txtEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/general_activity_margin"
-        android:layout_marginStart="@dimen/general_activity_margin"
-        android:labelFor="@+id/lblEmail"
-        android:ems="10"
-        android:hint="@string/main_txtEmail"
+        android:layout_marginEnd="@dimen/standardMargin"
+        android:hint="@string/main_txtEmail_hint"
+        android:imeOptions="actionNext"
         android:inputType="textEmailAddress"
-        android:nextFocusDown="@+id/txtPhonenumber"
         app:layout_constraintEnd_toStartOf="@+id/imgEmail"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toStartOf="@+id/lblEmail"
         app:layout_constraintTop_toBottomOf="@+id/lblEmail"
-        tools:text="@sample/users.json/users/email"
-        tools:ignore="Autofill"/>
 
-    <ImageView
-        android:id="@+id/imgEmail"
-        android:layout_width="@dimen/general_button_min_wdith"
-        android:layout_height="@dimen/general_button_min_wdith"
-        android:layout_marginBottom="@dimen/general_activity_margin"
-        android:layout_marginEnd="@dimen/general_activity_margin"
-        android:layout_marginTop="@dimen/general_activity_margin"
-        android:contentDescription="@string/main_imgEmail"
-        android:focusable="false"
-        android:src="@drawable/ic_email_24dp"
-        android:tint="@color/color_state_selector"
-        app:layout_constraintBottom_toBottomOf="@+id/txtEmail"
-        app:layout_constraintEnd_toStartOf="@+id/txtPhonenumber"
-        app:layout_constraintTop_toTopOf="@+id/txtEmail"/>
+        />
 
     <TextView
         android:id="@+id/lblPhonenumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/general_activity_margin"
+        android:layout_marginTop="@dimen/standardMargin"
         android:text="@string/main_lblPhonenumber"
         android:textColor="@color/color_state_selector"
         app:layout_constraintStart_toStartOf="@+id/txtPhonenumber"
-        app:layout_constraintTop_toBottomOf="@+id/txtName"/>
-
-    <EditText
-        android:id="@+id/txtPhonenumber"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/general_activity_margin"
-        android:layout_marginStart="@dimen/general_activity_margin"
-        android:labelFor="@+id/lblPhonenumber"
-        android:ems="5"
-        android:hint="@string/main_txtPhonenumber"
-        android:inputType="phone"
-        android:maxLength="@integer/main_txtEmail_maxLength"
-        android:nextFocusDown="@+id/txtAddress"
-        app:layout_constraintEnd_toStartOf="@+id/imgPhonenumber"
-        app:layout_constraintTop_toBottomOf="@+id/lblPhonenumber"
-        tools:text="@sample/users.json/users/phonenumber"
-        tools:ignore="Autofill"/>
+        app:layout_constraintTop_toBottomOf="@+id/txtName" />
 
     <ImageView
         android:id="@+id/imgPhonenumber"
-        android:layout_width="@dimen/general_button_min_wdith"
-        android:layout_height="@dimen/general_button_min_wdith"
-        android:layout_marginBottom="@dimen/general_activity_margin"
-        android:layout_marginEnd="@dimen/general_activity_margin"
-        android:layout_marginTop="@dimen/general_activity_margin"
-        android:contentDescription="@string/main_imgPhonenumber"
-        android:src="@drawable/ic_call_24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/standardMargin"
+        android:layout_marginBottom="@dimen/standardMargin"
+        android:contentDescription="@string/imgPhonenumber_description"
         android:tint="@color/color_state_selector"
-        android:focusable="false"
         app:layout_constraintBottom_toBottomOf="@+id/txtPhonenumber"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txtPhonenumber"/>
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/txtPhonenumber"
+        app:srcCompat="@drawable/ic_call_24dp" />
+
+    <ImageView
+        android:id="@+id/imgEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/standardMargin"
+        android:contentDescription="@string/imgEmail_description"
+        android:tint="@color/color_state_selector"
+        app:layout_constraintBottom_toBottomOf="@+id/txtEmail"
+        app:layout_constraintEnd_toStartOf="@+id/txtPhonenumber"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/txtEmail"
+        app:srcCompat="@drawable/ic_email_24dp" />
+
+    <EditText
+        android:id="@+id/txtPhonenumber"
+        android:layout_width="@dimen/lblPhone_fixedWidth"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/standardMargin"
+        android:layout_marginEnd="@dimen/standardMargin"
+        android:ems="@integer/txtphoneWidth"
+        android:hint="@string/main_txtPhonenumber_hint"
+        android:imeOptions="actionNext"
+        android:inputType="phone"
+        android:minEms="@integer/txtphoneWidth"
+        app:layout_constraintBaseline_toBaselineOf="@+id/txtEmail"
+        app:layout_constraintEnd_toStartOf="@+id/imgPhonenumber"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/imgEmail" />
+
 
     <TextView
         android:id="@+id/lblAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/general_activity_margin"
-        android:layout_marginTop="@dimen/general_activity_margin"
+        android:layout_marginTop="@dimen/standardMargin"
         android:text="@string/main_lblAddress"
         android:textColor="@color/color_state_selector"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtPhonenumber"/>
+        app:layout_constraintStart_toStartOf="@+id/txtEmail"
+        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
 
     <EditText
         android:id="@+id/txtAddress"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/general_activity_margin"
-        android:layout_marginStart="@dimen/general_activity_margin"
-        android:labelFor="@+id/lblAddress"
-        android:hint="@string/main_txtAddress"
-        android:inputType="textPostalAddress"
+        android:layout_marginEnd="@dimen/standardMargin"
+        android:ems="10"
+        android:hint="@string/main_txtAddress_hint"
+        android:inputType="text"
         app:layout_constraintEnd_toStartOf="@+id/imgAddress"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblAddress"
-        tools:text="@sample/users.json/users/address"
-        tools:ignore="Autofill"/>
-
-    <ImageView
-        android:id="@+id/imgAddress"
-        android:layout_width="@dimen/general_button_min_wdith"
-        android:layout_height="@dimen/general_button_min_wdith"
-        android:layout_marginBottom="@dimen/general_activity_margin"
-        android:layout_marginEnd="@dimen/general_activity_margin"
-        android:layout_marginTop="@dimen/general_activity_margin"
-        android:contentDescription="@string/main_imgAddress"
-        android:focusable="false"
-        android:src="@drawable/ic_map_24dp"
-        android:tint="@color/color_state_selector"
-        app:layout_constraintBottom_toBottomOf="@+id/txtAddress"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txtAddress"/>
+        app:layout_constraintStart_toStartOf="@+id/lblAddress"
+        app:layout_constraintTop_toBottomOf="@+id/lblAddress" />
 
     <TextView
         android:id="@+id/lblWeb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/general_activity_margin"
-        android:layout_marginTop="@dimen/general_activity_margin"
+        android:layout_marginTop="@dimen/standardMargin"
         android:text="@string/main_lblWeb"
         android:textColor="@color/color_state_selector"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtAddress"/>
+        app:layout_constraintStart_toStartOf="@+id/txtAddress"
+        app:layout_constraintTop_toBottomOf="@+id/txtAddress" />
 
     <EditText
         android:id="@+id/txtWeb"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/general_activity_margin"
-        android:layout_marginStart="@dimen/general_activity_margin"
-        android:labelFor="@+id/lblWeb"
+        android:layout_marginEnd="@dimen/standardMargin"
+        android:ems="10"
         android:hint="@string/main_txtWeb"
-        android:inputType="textWebEditText"
+        android:inputType="textUri"
         app:layout_constraintEnd_toStartOf="@+id/imgWeb"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblWeb"
-        tools:text="@sample/users.json/users/web"
-        tools:ignore="Autofill"/>
+        app:layout_constraintStart_toStartOf="@+id/lblWeb"
+        app:layout_constraintTop_toBottomOf="@+id/lblWeb" />
+
+    <ImageView
+        android:id="@+id/imgAddress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/standardMargin"
+        android:layout_marginBottom="@dimen/standardMargin"
+        android:contentDescription="@string/imgAddress_description"
+        android:tint="@color/color_state_selector"
+        app:layout_constraintBottom_toBottomOf="@+id/txtAddress"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_map_24dp" />
 
     <ImageView
         android:id="@+id/imgWeb"
-        android:layout_width="@dimen/general_button_min_wdith"
-        android:layout_height="@dimen/general_button_min_wdith"
-        android:layout_marginBottom="@dimen/general_activity_margin"
-        android:layout_marginEnd="@dimen/general_activity_margin"
-        android:layout_marginTop="@dimen/general_activity_margin"
-        android:contentDescription="@string/main_imgWeb"
-        android:src="@drawable/ic_web_24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/standardMargin"
+        android:layout_marginBottom="@dimen/standardMargin"
+        android:contentDescription="@string/imageWeb_description"
         android:tint="@color/color_state_selector"
         app:layout_constraintBottom_toBottomOf="@+id/txtWeb"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txtWeb"/>
+        app:srcCompat="@drawable/ic_web_24dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
