--- a/app/src/main/res/layout/activity_avatar.xml
+++ b/app/src/main/res/layout/activity_avatar.xml
@@ -88,8 +88,8 @@
         android:id="@+id/lblAvatar1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="@dimen/standardMargin"
+        android:layout_marginBottom="@dimen/standardMargin"
         android:background="@android:color/background_dark"
         android:backgroundTint="@color/colorBlack"
         android:padding="@dimen/lblPadding"
@@ -102,8 +102,8 @@
         android:id="@+id/lblAvatar2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="@dimen/standardMargin"
+        android:layout_marginBottom="@dimen/standardMargin"
         android:background="@android:color/background_dark"
         android:backgroundTint="@color/colorBlack"
         android:padding="@dimen/lblPadding"
@@ -116,8 +116,8 @@
         android:id="@+id/lblAvatar3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="@dimen/standardMargin"
+        android:layout_marginBottom="@dimen/standardMargin"
         android:background="@android:color/background_dark"
         android:backgroundTint="@color/colorBlack"
         android:padding="@dimen/lblPadding"
@@ -130,8 +130,8 @@
         android:id="@+id/lblAvatar4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="@dimen/standardMargin"
+        android:layout_marginBottom="@dimen/standardMargin"
         android:background="@android:color/background_dark"
         android:backgroundTint="@color/colorBlack"
         android:padding="@dimen/lblPadding"
@@ -144,8 +144,8 @@
         android:id="@+id/lblAvatar5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="@dimen/standardMargin"
+        android:layout_marginBottom="@dimen/standardMargin"
         android:background="@android:color/background_dark"
         android:backgroundTint="@color/colorBlack"
         android:padding="@dimen/lblPadding"
@@ -158,8 +158,8 @@
         android:id="@+id/lblAvatar6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="@dimen/standardMargin"
+        android:layout_marginBottom="@dimen/standardMargin"
         android:background="@android:color/background_dark"
         android:backgroundTint="@color/colorBlack"
         android:padding="@dimen/lblPadding"
