--- a/app/src/main/res/layout-land/activity_avatar.xml
+++ b/app/src/main/res/layout-land/activity_avatar.xml
@@ -16,6 +16,7 @@
         app:layout_constraintBottom_toTopOf="@+id/imgAvatar4"
         app:layout_constraintEnd_toStartOf="@+id/imgAvatar2"
         app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/cat1" />
